# eon

./: Cargo.toml  README.md  RELEASES.md  TODO.md  clippy.toml  deny.toml  example.eon  lychee.toml
.github/workflows/: eon_lsp_release.yml  eon_zed_extension.yml  labels.yml  rust.yml
crates/con/: Cargo.toml
crates/con/src/: ast.rs  ast_from_value.rs  error.rs  format.rs  lib.rs  parse.rs  span.rs  token.rs  token_tree.rs  token_tree_from_value.rs  value.rs  value_from_ast.rs  value_from_token_tree.rs
crates/con/src/serde/: deserialize_value.rs  deserializer.rs  mod.rs  serialize_value.rs  serializer.rs
crates/con/src/value/: map.rs  mod.rs  number.rs
crates/con/tests/: .test_parse_errors.rs.pending-snap  test_format.rs  test_parse_errors.rs  test_parse_files.rs  test_parse_success.rs  test_reformat.rs  test_serde.rs
crates/con/tests/snapshots/: test_format__format.snap  test_reformat__reformat.snap  test_serde__serde.snap
crates/con_syntax/: Cargo.toml  README.md
crates/con_syntax/src/: error.rs  format.rs  lib.rs  parse.rs  span.rs  token.rs  token_kind.rs  token_tree.rs
crates/confmt/: Cargo.toml  README.md
crates/confmt/src/: main.rs
crates/eon/: Cargo.toml
crates/eon/benches/: bench_parse.rs
crates/eon/src/: lib.rs  token_tree_from_value.rs  value_from_token_tree.rs
crates/eon/src/serde/: deserializer.rs  mod.rs  serializer.rs
crates/eon/src/value/: map.rs  mod.rs  number.rs  variant.rs
crates/eon/tests/: test_example_eon.rs  test_format.rs  test_numbers.rs  test_parse_errors.rs  test_parse_success.rs  test_reformat.rs  test_serde.rs
crates/eon/tests/snapshots/: test_format__format.snap  test_serde__serde.snap
crates/eon_lsp/: Cargo.toml  README.md
crates/eon_lsp/src/: main.rs
crates/eon_syntax/: Cargo.toml  README.md
crates/eon_syntax/src/: error.rs  format.rs  lib.rs  parse.rs  span.rs  strings.rs  token_kind.rs  token_tree.rs
crates/eonfmt/: Cargo.toml  README.md
crates/eonfmt/src/: main.rs
scripts/: generate_changelog.py  template_update.py
scripts/clippy_wasm/: clippy.toml
