[package]
authors.workspace = true
categories = []                                                      # TODO: fill in
description = ""                                                     # TODO: fill in
edition.workspace = true
homepage.workspace = true
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
keywords = []                                                        # TODO: fill in
license.workspace = true
name = "con"
publish = false
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]


[features]
default = []

## Enable serializing/deserializing Con values with `serde`.
serde = ["dep:serde"]


[dependencies]
ariadne = "0.5.1"
indexmap = "2.10.0"
logos = "0.15.0"

serde = { version = "1.0.219", optional = true }

## Enable this when generating docs.
document-features = { version = "0.2.11", optional = true }
snailquote = "0.3.1"


[dev-dependencies]
insta = "1.0.9"
serde = { version = "1.0.219", features = ["derive"] }
