[package]
authors.workspace = true
categories = []                                                      # TODO: fill in
description = ""                                                     # TODO: fill in
edition.workspace = true
homepage.workspace = true
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
keywords = []                                                        # TODO: fill in
license.workspace = true
name = "con"
publish = false
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]


[features]
default = []

## Enable serializing/deserializing Con values with `serde`.
serde = ["dep:serde"]


[dependencies]
con_syntax.workspace = true

document-features = { workspace = true, optional = true }
indexmap.workspace = true
serde = { workspace = true, optional = true }


[dev-dependencies]
insta.workspace = true
serde = { workspace = true, features = ["derive"] }
