[package]
authors.workspace = true
categories = []                                                                                 # TODO: fill in
description = "Describes the syntax of the Con config format, with parsing and pretty-printing"
edition.workspace = true
homepage.workspace = true
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
keywords = []                                                                                   # TODO: fill in
license.workspace = true
name = "con_syntax"
publish = false
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]


[features]
default = []


[dependencies]
ariadne.workspace = true
document-features = { workspace = true, optional = true }
logos.workspace = true
snailquote.workspace = true
