[package]
authors.workspace = true
categories = []                                                                                 # TODO: fill in
description = "A binary for formatting .con config files."
edition.workspace = true
homepage.workspace = true
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
keywords = []                                                                                   # TODO: fill in
license.workspace = true
name = "confmt"
publish = false
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]


[features]
default = []


[dependencies]
con_syntax.workspace = true

clap.workspace = true
ignore.workspace = true
