[package]
authors.workspace = true
categories.workspace = true
description = "Use the Eon config format with serde"
edition.workspace = true
homepage.workspace = true
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
keywords.workspace = true
license.workspace = true
name = "eon"
publish = true
readme = "../README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]


[features]
default = ["serde"]

## Enable serializing/deserializing Eon values with `serde`.
serde = ["dep:serde"]


[dependencies]
eon_syntax.workspace = true

document-features = { workspace = true, optional = true }
indexmap.workspace = true
serde = { workspace = true, optional = true }
vec1.workspace = true


[dev-dependencies]
divan = "0.1.21"
insta.workspace = true
serde = { workspace = true, features = ["derive"] }

[[bench]]
name = "bench_parse"
harness = false
