[package]
authors.workspace = true
categories.workspace = true
description = "Describes the syntax of the Eon config format, with parsing and pretty-printing"
edition.workspace = true
homepage.workspace = true
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
keywords.workspace = true
license.workspace = true
name = "eon_syntax"
publish = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]


[features]
default = []


[dependencies]
ariadne.workspace = true
logos.workspace = true
